--- a/Assignment03.html
+++ b/Assignment03.html
@@ -6,13 +6,14 @@
 		<!--
 		91.461 Assignment:  Creating Your First Web Page
 		Khyteang Lim, Student, UMass Lowell Computer Science, khy_lim@student.uml.edu
-		updated by KL on September 10, 2015 at 1:08 PM
+		updated by KL on September 22, 2015 at 1:08 PM
 		
 		This web page contains personal information about Khyteang Lim.
 		This is the HTML for my personal page.
 		-->
 		<!--link CSS file-->
 		<link rel="stylesheet" type="text/css" href="css/Assignment03.css">
+		<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet" type="text/css">
 		<title>Personal Page | Khyteang Lim</title>
 	</head>
 	
@@ -21,7 +22,7 @@
 		
 		<!--website title banner-->
 		<div id="frontPage">
-			<img class="headerImage" src="images/headerBackground1.jpg">
+			<img class="headerImage" src="images/headerBackground1.jpg" alt="Front Page Background">
 				<div class="my-title-container">
 					<h1>Welcome to Khyteang's Page</h1>
 				</div>
@@ -36,20 +37,20 @@
 		
 		<!--about me section-->
 		<div id="aboutMeSection">
-			<img class="headerImage" src="images/headerBackground5.jpg">
+			<img class="headerImage" src="images/headerBackground5.jpg" alt="About Me Background">
 				<div class="my-title-container">
 					<h1>About Me</h1>
 				</div>
 
 			<!--menu section-->
 			<div class="container">
-				<p>Hello, my name is Khyteang Lim and I am currently a senior at the University of Massaschusetts: Lowell. I am pursuing a Bachelor of Science in the field of Computer Science. I enjoy playing tennis, basketball, and going out for a nice walk at the Merrimack River.</p>
+				<p>Hello, my name is Khyteang Lim and I am currently a senior at the University of Massaschusetts: Lowell. I am pursuing a Bachelor of Science in the field of Computer Science. I enjoy playing tennis and going out for a nice walk at the Merrimack River.</p>
 			</div>
 		</div>
 
 		<!--gui assignments section-->
 		<div id="guiAssignmentSection">
-			<img class="headerImage" src="images/headerBackground8.jpg">
+			<img class="headerImage" src="images/headerBackground8.jpg" alt="Gui Assignment Background">
 			<div class="my-title-container">
 				<h1>GUI Assignments</h1>
 			</div>
@@ -80,13 +81,11 @@
 					</tr>
 				</table>
 			</div>
-			<p style="clear: both;"></p>
 		</div>
-		
 
-				<!--about me section-->
+		<!--hackathon projects section-->
 		<div id="hackathonProjectsSection">
-			<img class="headerImage" src="images/headerBackground6.jpg">
+			<img class="headerImage" src="images/headerBackground6.jpg" alt="Hackathon Projects Background">
 				<div class="my-title-container">
 					<h1>Hackathon Projects</h1>
 				</div>
@@ -94,5 +93,13 @@
 				<img src="images/Page_under_construction.png" alt="This part of the website is under construction.">
 				</div>
 		</div>
+		<p>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer">
+    		<img style="border:0;width:88px;height:31px"
+        	src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        	alt="Valid CSS!" />
+    </a>
+</p>
+     
 	</body>
 </html>
