--- a/Assignment06.html
+++ b/Assignment06.html
@@ -118,14 +118,14 @@
         <!--multiplication table-->
         <div id="table"></div>
 
-        <!-- css validation
+        <!--css validation-->
         <p style="position:absolute; margin-top: 90%;"> 
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
             alt="Valid CSS!" />
             </a>
-        </p> -->
+        </p> 
 	</body>
 
 </html>
