--- a/Assignment06.html
+++ b/Assignment06.html
@@ -119,13 +119,13 @@
         <div id="table"></div>
 
         <!--css validation-->
-        <p style="position:absolute; margin-top: 90%;"> 
+        <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px"
-            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-            alt="Valid CSS!" />
+                <img style="border:0;width:88px;height:31px"
+                    src="//jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
             </a>
-        </p> 
+        </p>
 	</body>
 
 </html>
