--- a/Assignment03.html
+++ b/Assignment03.html
@@ -29,13 +29,13 @@
 
 			<!--menu section-->
 			<ul class="menuBar">
-				<li class="menuItem"><a class="menuItemLink" href="#aboutMeSection">About Me</a></li>
-				<li class="menuItem"><a class="menuItemLink" href="#guiAssignmentSection">GUI Assignments</a></li>
-				<li class="menuItem"><a class="menuItemLink" href="#hackathonProjectsSection">Hackathon Projects</a></li>
+				<li class="menuItem"><a class="menuItemLink page-scroll" href="#aboutMeSection">About Me</a></li>
+				<li class="menuItem"><a class="menuItemLink page-scroll" href="#guiAssignmentSection">GUI Assignments</a></li>
+				<li class="menuItem"><a class="menuItemLink page-scroll" href="#hackathonProjectsSection">Hackathon Projects</a></li>
 			</ul>
 		</div>
 		
-		<!--about me section-->
+		<!--about me section-->	
 		<div id="aboutMeSection">
 			<img class="headerImage" src="images/headerBackground5.jpg" alt="About Me Background">
 				<div class="my-title-container">
@@ -98,8 +98,20 @@
     		<img style="border:0;width:88px;height:31px"
         	src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
         	alt="Valid CSS!" />
-    </a>
-</p>
-     
+    		</a>
+		</p>
+
+
+	    <!-- jQuery -->
+	    <script src="javascripts/jquery.min.js"></script>
+
+	    <!-- Bootstrap Core JavaScript -->
+	    <script src="javascripts/bootstrap.min.js"></script>
+
+	    <!-- Plugin JavaScript -->
+	    <script src="javascripts/jquery.easing.min.js"></script>
+
+	    <!-- Custom Theme JavaScript -->
+	    <script src="javascripts/Assignment03.js"></script>
 	</body>
 </html>
