--- a/Assignment08.html
+++ b/Assignment08.html
@@ -72,10 +72,16 @@
 				<br>
 				<!-- label for status to show user -->
 				<label id="status">Valid Inputs</label>
-				<br>
-				<br>
+				<div id="deleteArea" style="margin-top: 20px;">
+					<input type="button" value="Delete" id="delete">
+					<input type="button" value="Delete All Tabs" id="deleteAll">
+					<br>
+					<div id="check" style="margin-top: 10px;"></div>
+					<br>
+					<br>
+				</div>
+
 			</div>
-			
 		</div>
 		
 		<!-- css validation -->
