--- a/Assignment09.html
+++ b/Assignment09.html
@@ -52,7 +52,7 @@
 			
 			<td id="rackTiles">
 				<div id="information">Player's Tiles</div>
-				<img id="rack" src="images/scrabble/Scrabble_Rack_flat.resized.png" class='droppable'>
+				<img id="rack" alt="rack" src="images/scrabble/Scrabble_Rack_flat.resized.png" class='droppable'>
 				<div id="scrabbleTiles"></div>
 				<div id="wordOnBoard">Word: </div>
 				<div id="scoreBoard">Score: </div>
@@ -61,9 +61,6 @@
 				<button id="resetBoardBtn">Reset Board</button>
 				<div id="remainingTableDiv">
 					<table id="remainingTileTable">
-						<tr id="remainingTableRow1"></tr>
-						<tr id="remainingTableRow2"></tr>
-						<tr id="remainingTableRow3"></tr>
 					</table>
 				</div>
 			</td>
